--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <h1>Hello Worlds</h1>
+        <button id="clickMe">Click Me</button>
         <script src="./App.js" async defer></script>
     </body>
 </html>
