the value of this keyword in DOM is the reference to HTML element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>Hello Worlds</h1>
-        <button id="clickMe">Click Me</button>
+        <button id="clickMe" onClick="alert(this.id)">Click Me</button>
         <script src="./App.js" async defer></script>
     </body>
 </html>
