--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <body>
         <h1>Hello Worlds</h1>
         <input onkeyup="betterFunction()"/>
-        <script src="./App.js" async defer></script>
+        <script src="./App.js"></script>
     </body>
 </html>
