--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <title>SNEHIL</title>
+        <style>
+            div {
+               min-width : 100px;
+               min-height : 100px;
+               padding : 30px;
+               border : 1px solid black;
+            }
+        </style>
     </head>
     <body>
-        <h1>Hello Worlds</h1>
-        <input onkeyup="betterFunction()"/>
+        <div id="grandParent">
+            <div id="parent">
+                <div id="child">
+
+                </div>
+            </div>
+        </div>
         <script src="./App.js"></script>
     </body>
 </html>
