--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         </style>
     </head>
     <body>
-        <div id="grandParent">
-            <div id="parent">
-                <div id="child">
-
-                </div>
-            </div>
+        <div id="div">
+            <ul id="category">
+                <li id="laptop">Laptop</li>
+                <li id="camera">Camera</li>
+                <li id="shoes">Shoes</li>
+            </ul>
         </div>
         <script src="./App.js"></script>
     </body>
