--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
     <head>
         <title>SNEHIL</title>
         <style>
-            div {
-               min-width : 100px;
-               min-height : 100px;
-               padding : 30px;
-               border : 1px solid black;
-            }
         </style>
     </head>
     <body>
+        <div id="root"></div>
         <script src="./App.js"></script>
     </body>
 </html>
