--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
     <head>
         <title>SNEHIL</title>
-        <style>
-        </style>
+        <link rel="stylesheet" href="./style.css"/>
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root">
+            <div class="container">
+                <div class="item item1">1</div>
+                <div class="item">2</div>
+                <div class="item">3</div>
+                <div class="item">4</div>
+                <div class="item">5</div>
+                <div class="item">6</div>
+                <div class="item">7</div>
+            </div>
+        </div>
         <script src="./App.js"></script>
     </body>
 </html>
