--- a/index.html
+++ b/index.html
@@ -5,17 +5,8 @@
         <link rel="stylesheet" href="./style.css"/>
     </head>
     <body>
-        <div id="root">
-            <div class="container">
-                <div class="item item1">1</div>
-                <div class="item">2</div>
-                <div class="item">3</div>
-                <div class="item">4</div>
-                <div class="item">5</div>
-                <div class="item">6</div>
-                <div class="item">7</div>
-            </div>
-        </div>
+       
+        <button id="clickMe" class="hello" onclick="alert(this.class)">click</button>
         <script src="./App.js"></script>
     </body>
 </html>
