--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
        
-        <button id="clickMe" class="hello" onclick="alert(this.class)">click</button>
+        <input onkeyup="apicall()"/>
         <script src="./App.js"></script>
     </body>
 </html>
