--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <input onkeyup="debounceFunction()"/>
+    <input onkeyup="throttleFunction()"/>
     <script src="App.js"></script>
 </body>
 </html>
