--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <input onkeyup="debounceFunction()"/>
-    <script src="App.js"></script>
+    <div id="div">
+        <ul id="category">
+            <li id="laptop">laptop</li>
+            <li id="monitor">Monitor</li>
+            <li id="cpu">Cpu</li>
+            <li id="keyboard">Keyboard</li>
+        </ul>
+
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
